v1.4.7
- Added Slide Taunt - Lets you slide while emoting
- Added Explode Jetpack - Explodes the jetpack held by the player
- Added Explode All Jetpacks - Explodes all jetpacks on the ground
- Added Explode Jetpacks On Grab - When picked up it explodes
- Fixed Masked Player not getting collected - Only enemy that didn't call the base start method

v1.4.6
- Added Host kicked warning to anti kick - Shows what lobbies hosts kicked you!
- Added Lethal Menu User Warning to Display Lethal Menu Users - Shows if the host is using Lethal Menu User in the lobby
- Added Enemy Vent ESP 
- Added Enemy Vent Chams 
- Added Vain Shroud ESP - I know these were removed but its incase they get added back
- Added Vain Shroud Chams 
- Added Cruiser ESP
- Added Cruiser Chams 
- Added Item Dropship ESP
- Added Item Dropship Chams 
- Added Audio to Free cam
- Added Audio to Spectate player
- Added Box ESP - Draws boxes around the object
- Added Mineshaft colors - They were forgotten by icy >:C
- Added Toggle Mineshaft Elevator - Brings elevator the opposite way
- Added Toggle Vehicle Magnet - Toggles the vehicle magnet on and off
- Added Toggle Vehicle Ignition - Toggles the vehicle engine on and off
- Added Object Queue Delay - Delay it takes to add to the lists
- Added Toggle All Chams 
- Added Spam Shoot All Shotguns - Spam shoots all the shotguns regardless if its in an inventory or ground
- Added Shot All Shotguns - Shoots all shotguns regardless if its in an inventory or ground
- Added Minigun Shotgun - Lets you shoot the shotgun like a mini gun! (HOLD LMB)
- Added Grab Nutcrackers Shotgun - Lets you grab the nutcrackers shotgun out of his hands!
- Added Display Credits - Displays terminal credits
- Added Message Spam - Will spam whatever message you have selected
- Added Is Outside to enemy tab - Shows if the enemy is outside or not
- Added Item Amount to Item Manager - Lets you spawn more then 1 item at once
- Added Explode Cruiser - Explodes the cruiser