@@ -1,20 +1,16 @@
 using HarmonyLib;
-using UnityEngine;
 using LethalMenu.Util;
 using UnityEngine.InputSystem;
-using System.Reflection;
-using System;
 
 namespace LethalMenu.Cheats
 {
     [HarmonyPatch]
     internal class UnlimitedPresents : Cheat
     {
-        private static bool stuckpresent = false;
+        public static bool stuckpresent = false;
 
         public override void Update()
         {
-            GiftBoxItem __instance = new();
             if (Hack.UnlimitedPresents.IsEnabled() && LethalMenu.localPlayer.currentlyHeldObjectServer is GiftBoxItem && stuckpresent && Keyboard.current.gKey.isPressed)
             {
                 Hack.DeleteHeldItem.Execute();
@@ -34,10 +30,10 @@ namespace LethalMenu.Cheats
             return true;
         }
 
-        [HarmonyPatch(typeof(GiftBoxItem), nameof(GiftBoxItem.Start)), HarmonyPostfix]
-        public static void Start(GiftBoxItem __instance)
+        [HarmonyPatch(typeof(GrabbableObject), nameof(GrabbableObject.Start)), HarmonyPostfix]
+        public static void Start(GrabbableObject __instance)
         {
-            if (Hack.UnlimitedPresents.IsEnabled() && LethalMenu.localPlayer.currentlyHeldObjectServer is GiftBoxItem && stuckpresent) __instance.Reflect().SetValue("hasUsedGift", false);
+            if (Hack.UnlimitedPresents.IsEnabled() && LethalMenu.localPlayer.currentlyHeldObjectServer is GiftBoxItem giftBoxItem && stuckpresent) giftBoxItem.Reflect().SetValue("hasUsedGift", false);
         }
     }
 }
